--- a/Tech/Shopper/app/src/main/res/layout/activity_cpromotion_home_helper.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_cpromotion_home_helper.xml
@@ -28,7 +28,7 @@
             android:maxLines="1"
             android:maxLength="35"
             android:ellipsize="end"
-            android:fontFamily="@font/open_sans"
+            android:fontFamily="@font/montserrat_bold"
             android:textSize="18sp"
             android:textColor="@color/colorBlack"/>
 
@@ -43,7 +43,7 @@
                 android:layout_width="75dp"
                 android:layout_height="wrap_content"
                 android:text="Date: "
-                android:fontFamily="@font/open_sans"
+                android:fontFamily="@font/montserrat"
                 android:textSize="15sp"
                 android:textColor="@color/colorBlack"/>
             <TextView
@@ -52,7 +52,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="dd/mm/yyyy - dd/mm/yyyy"
-                android:fontFamily="@font/open_sans"
+                android:fontFamily="@font/montserrat"
                 android:textSize="15sp"
                 android:textColor="@color/colorBlack"/>
         </LinearLayout>
@@ -66,7 +66,7 @@
             <TextView
                 android:layout_width="75dp"
                 android:layout_height="match_parent"
-                android:fontFamily="@font/open_sans"
+                android:fontFamily="@font/montserrat"
                 android:text="Tags: "
                 android:textColor="@color/colorBlack"
                 android:textSize="15sp" />
@@ -76,7 +76,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="F &amp; B, Kids"
-                android:fontFamily="@font/open_sans"
+                android:fontFamily="@font/montserrat"
                 android:textSize="15sp"
                 android:textColor="@color/colorBlack"/>
         </LinearLayout>
@@ -91,7 +91,7 @@
                 android:layout_width="75dp"
                 android:layout_height="wrap_content"
                 android:text="Ratings: "
-                android:fontFamily="@font/open_sans"
+                android:fontFamily="@font/montserrat"
                 android:textSize="15sp"
                 android:textColor="@color/colorBlack"/>
             <RatingBar
