--- a/Tech/Shopper/app/src/main/res/layout/activity_main.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_main.xml
@@ -23,10 +23,11 @@
             android:layout_height="250dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="40dp"
-            android:src="@mipmap/ic_logogo_red" />
+            android:src="@drawable/finallogo" />
 
         <!-- Text: Let's Collab-->
         <TextView
+            android:visibility="gone"
             android:id="@+id/ss_name_TV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
