--- a/Tech/Shopper/app/src/main/res/layout/activity_mall_insight_home.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_mall_insight_home.xml
@@ -53,7 +53,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Floorfall Insights"
+            android:text="Footfall Insights"
             android:textSize="20sp"
             android:textColor="@color/colorWhite"
             android:fontFamily="@font/montserrat_bold"/>
