--- a/Tech/Shopper/app/src/main/res/layout/activity_splash_screen.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_splash_screen.xml
@@ -20,9 +20,10 @@
             android:id="@+id/ss_icon_IV"
             android:layout_width="250dp"
             android:layout_height="250dp"
-            android:src="@mipmap/ic_logogo_red" />
+            android:src="@drawable/finallogo" />
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/ss_name_TV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
